--- a/public/sass/header_list.scss
+++ b/public/sass/header_list.scss
@@ -28,3 +28,7 @@
 .card img { // Img fit the card
   object-fit: cover;
 }
+
+.article {
+  text-align: justify;
+}
